--- a/auth-api/.env
+++ b/auth-api/.env
@@ -10,7 +10,7 @@ USERS_API_ADDRESS=http://users-api:8083
 
 # todos-api:
 JWT_SECRET=myfancysecret
-REDIS_HOST=redis
+REDIS_HOST=redis-queue
 REDIS_PORT=6379
 REDIS_CHANNEL=log_channel
 
@@ -19,7 +19,7 @@ SERVER_PORT=8083
 JWT_SECRET=myfancysecret
 
 # log-message-processor:
-REDIS_HOST=redis
+REDIS_HOST=redis-queue
 REDIS_PORT=6379
 REDIS_CHANNEL=log_channel
 
