--- a/log-message-processor/Dockerfile
+++ b/log-message-processor/Dockerfile
@@ -1,24 +1,29 @@
-# Use Python 3.7 as the base image
-FROM python:3.7-slim
-
-# Install build dependencies
+# Use Python 3.8 slim
+FROM python:3.8-slim
+WORKDIR /app
+# Install required system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    python3-dev \
+    libc-dev \
     libssl-dev \
     libffi-dev \
+    build-essential \
+    python3-pip \
     && rm -rf /var/lib/apt/lists/*
-
-# Set the working directory
-WORKDIR /app
-
-# Copy requirements.txt
+# Copy requirements file
 COPY requirements.txt .
-
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the rest of the application code
+# Upgrade pip and install Python packages
+RUN pip install --upgrade pip && \
+    pip install thriftpy2==0.4.14 && \
+    pip install wheel && \
+    pip install redis py_zipkin requests six && \
+    pip install --no-cache-dir -r requirements.txt \
+    pip uninstall -y thriftpy || true
+# Copy application code
 COPY . .
-
-# Command to run the application
+# Set environment variables
+ENV REDIS_HOST=redis \
+    REDIS_PORT=6379 \
+    REDIS_CHANNEL=log_channel
 CMD ["python", "main.py"]
