--- a/.env
+++ b/.env
@@ -9,8 +9,9 @@ JWT_SECRET=myfancysecret
 USERS_API_ADDRESS=http://users-api:8083
 
 # todos-api:
+TODOS_API_PORT=8082
 JWT_SECRET=myfancysecret
-REDIS_HOST=redis
+REDIS_HOST=redis-queue
 REDIS_PORT=6379
 REDIS_CHANNEL=log_channel
 
@@ -19,14 +20,8 @@ SERVER_PORT=8083
 JWT_SECRET=myfancysecret
 
 # log-message-processor:
-REDIS_HOST=redis
+REDIS_HOST=redis-queue
 REDIS_PORT=6379
 REDIS_CHANNEL=log_channel
 
-# login details
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=Admin123
-HNG_USERNAME=hng
-HNG_PASSWORD=HngTech
-USER_USERNAME=user
-USER_PASSWORD=Password
+
